# curly-octo-funicular

./: LICENSE  README.md  build.sh  pyproject.toml
Rezipes/: manage.py
Rezipes/Rezipes/: asgi.py  settings.py  urls.py  wsgi.py
Rezipes/apps/Account/: email.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
Rezipes/apps/Core/: admin.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
Rezipes/apps/Core/migrations/: 0001_initial.py  0002_remove_recipes_ratings_alter_comments_id_and_more.py  0003_alter_comments_id_alter_ratings_id_alter_recipes_id.py  0004_recipes_avg_rating_alter_comments_id_and_more.py
Rezipes/templates/: activation.html
